// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - export-jdl exports entities to a JDL file with file argument should match snapshot 1`] = `
{
  "custom-app.jdl": {
    "contents": "application {
  config {
    baseName standard
    creationTimestamp 1577836800000
    packageName com.mycompany.myapp
    serverPort 8080
    authenticationType session
    cacheProvider ehcache
    enableHibernateCache true
    websocket no
    databaseType sql
    devDatabaseType h2Memory
    prodDatabaseType postgresql
    searchEngine no
    buildTool gradle
    rememberMeKey "5f1100e7eae25e2abe32d7b2031ac1f2acc778d8"
    applicationType monolith
    jhiPrefix jhi
    enableTranslation true
    nativeLanguage en
    languages [en]
    skipClient true
    skipServer true
  }

  config(jhipster) {
    jhipsterVersion "3.7.1"
    packageFolder "com/mycompany/myapp"
  }

  entities Country, Department, Employee, Job, JobHistory, Region, Task

  noFluentMethod Department, Employee
  dto Country, Department, Job, JobHistory, Region, Task with no
  dto Employee with mapstruct
  service Country, Department, Job, JobHistory, Region, Task with no
  service Employee with serviceClass
  pagination Country, Department, Region, Task with no
  pagination Employee, JobHistory with infinite-scroll
  pagination Job with pagination
  microservice Employee with mymicroservice
  search Employee with elasticsearch
  angularSuffix Employee with myentities
}

entity Country (country) {
  /**
   * The country Id
   */
  @Id
  countryId Long
  countryName String
}
entity Department (department) {
  departmentId Long
  departmentName String required
}
/**
 * The Employee entity.
 */
entity Employee (emp) {
  @Id
  employeeId Long
  @CustomAnnotation("customValue")
  employeeUuid UUID
  /**
   * The firstname attribute.
   */
  firstName String
  lastName String
  email String
  phoneNumber String
  hireDate ZonedDateTime
  salary Long min(10000) max(1000000)
  commissionPct Long
}
entity Job (job) {
  jobId Long
  jobTitle String
  minSalary Long
  maxSalary Long
}
entity JobHistory (job_history) {
  startDate ZonedDateTime
  endDate ZonedDateTime
  language Language
}
entity Region (region) {
  regionId Long
  regionName String
}
entity Task (task) {
  taskId Long
  title String
  description String
}

enum Language {
  FRENCH,
  ENGLISH,
  SPANISH
}

relationship OneToOne {
  Country{region(id)} to Region{country}
  Department{location(id)} to Location
}
relationship OneToMany {
  @DestinationAnnotation Department{employee required} to Employee{department(foo)}
  Employee{job} to Job{employee(id)}
}
relationship ManyToOne {
  Employee{manager(id)} to Employee
}
relationship ManyToMany {
  Job{task(title)} to Task{job required}
}
relationship OneToOne {
  JobHistory{job(id)} to Job
  JobHistory{department(id)} to Department
  JobHistory{employee(id)} to Employee
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - export-jdl exports entities to a JDL file without argument should match snapshot 1`] = `
{
  "standard.jdl": {
    "contents": "application {
  config {
    baseName standard
    creationTimestamp 1577836800000
    packageName com.mycompany.myapp
    serverPort 8080
    authenticationType session
    cacheProvider ehcache
    enableHibernateCache true
    websocket no
    databaseType sql
    devDatabaseType h2Memory
    prodDatabaseType postgresql
    searchEngine no
    buildTool gradle
    rememberMeKey "5f1100e7eae25e2abe32d7b2031ac1f2acc778d8"
    applicationType monolith
    jhiPrefix jhi
    enableTranslation true
    nativeLanguage en
    languages [en]
    skipClient true
    skipServer true
  }

  config(jhipster) {
    jhipsterVersion "3.7.1"
    packageFolder "com/mycompany/myapp"
  }

  entities Country, Department, Employee, Job, JobHistory, Region, Task

  noFluentMethod Department, Employee
  dto Country, Department, Job, JobHistory, Region, Task with no
  dto Employee with mapstruct
  service Country, Department, Job, JobHistory, Region, Task with no
  service Employee with serviceClass
  pagination Country, Department, Region, Task with no
  pagination Employee, JobHistory with infinite-scroll
  pagination Job with pagination
  microservice Employee with mymicroservice
  search Employee with elasticsearch
  angularSuffix Employee with myentities
}

entity Country (country) {
  /**
   * The country Id
   */
  @Id
  countryId Long
  countryName String
}
entity Department (department) {
  departmentId Long
  departmentName String required
}
/**
 * The Employee entity.
 */
entity Employee (emp) {
  @Id
  employeeId Long
  @CustomAnnotation("customValue")
  employeeUuid UUID
  /**
   * The firstname attribute.
   */
  firstName String
  lastName String
  email String
  phoneNumber String
  hireDate ZonedDateTime
  salary Long min(10000) max(1000000)
  commissionPct Long
}
entity Job (job) {
  jobId Long
  jobTitle String
  minSalary Long
  maxSalary Long
}
entity JobHistory (job_history) {
  startDate ZonedDateTime
  endDate ZonedDateTime
  language Language
}
entity Region (region) {
  regionId Long
  regionName String
}
entity Task (task) {
  taskId Long
  title String
  description String
}

enum Language {
  FRENCH,
  ENGLISH,
  SPANISH
}

relationship OneToOne {
  Country{region(id)} to Region{country}
  Department{location(id)} to Location
}
relationship OneToMany {
  @DestinationAnnotation Department{employee required} to Employee{department(foo)}
  Employee{job} to Job{employee(id)}
}
relationship ManyToOne {
  Employee{manager(id)} to Employee
}
relationship ManyToMany {
  Job{task(title)} to Task{job required}
}
relationship OneToOne {
  JobHistory{job(id)} to Job
  JobHistory{department(id)} to Department
  JobHistory{employee(id)} to Employee
}
",
    "stateCleared": "modified",
  },
}
`;
